Fixed spacing among tiles for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -213,6 +213,10 @@ html {
   border-radius: 10px;
   background: #fff;
   border: 1.5px solid #f3f3f3;
+
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 
@@ -227,6 +231,8 @@ html {
 .tile .tile-info {
   padding: 15px 15px;
   text-align: center;
+
+  flex-grow: 1;
 }
 .tile .tile-info a {
   font-family: "Montserrat", sans-serif;
@@ -248,7 +254,7 @@ html {
 .tile .tile-social {
   /* position: absolute; */
   bottom: 0;
-  position: relative;
+  /* position: relative; */
   /* overflow: hidden; */
   left: 0;
   bottom: 0;
@@ -258,10 +264,13 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  position: static;
+  margin-top: auto;
 }
 
 .tile-social .social-icons { /* grey rectangle */
-  position: absolute;
+  /* position: absolute; */
   /* position: relative; */
   bottom: 0;
   left: 0;
@@ -271,6 +280,8 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  position: static;
 }
 
 .tile-social .social-icons i {
